--- a/PythonApplication2/templates/prompt_name.html
+++ b/PythonApplication2/templates/prompt_name.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <form action="{{ url_for('say_hello') }}" method="post">
+        What's your name?<br />
         <input type="text" name="username" />
         <input type="submit" />
     </form>
