Add the following items: - implement a captcha feature - updated the home page html - experimented with python calendar library - experimented with mongodb driver - experimented with zmq - wrote a script to scrape pycon au website to extract the list of sponsors and save their website addresses in a text file on the local disk. - update the requirements file

--- a/PythonApplication2/templates/captcha_check_result.html
+++ b/PythonApplication2/templates/captcha_check_result.html
@@ -6,9 +6,12 @@
     <title></title>
 </head>
 <body>
-    <h2>
-        <a href="{{ url_for('prompt_name') }}">greeting link</a>
-    </h2>
-    <a href="{{ url_for('show_captcha') }}">Go to captcha page -></a>
+    {% if captcha_passed %}
+        passed.
+    {% else %}
+        failed!
+    {% endif %}
+    <br />
+    <a href="{{ url_for('homepage') }}">Home</a>
 </body>
 </html>
